--- a/package.json
+++ b/package.json
@@ -1,11 +1,21 @@
 {
   "name": "fe-products-searcher-ml",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "Luis Maracara",
   "dependencies": {
+    "axios": "^0.19.0",
+    "bootstrap": "^4.3.1",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
+    "react-bootstrap": "^1.0.0-beta.14",
     "react-dom": "^16.10.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
+  },
+  "devDependencies": {
+    "node-sass": "^4.12.0",
+    "webpack": "^4.41.2"
   },
   "scripts": {
     "start": "react-scripts start",
