--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
-    "webpack": "^4.41.2"
+    "react-styleguidist": "9.0.4",
+    "webpack": "4.41.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "styleguide": "styleguidist server",
+    "styleguide:build": "styleguidist build"
   },
   "eslintConfig": {
     "extends": "react-app"
