--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "devDependencies": {
     "enzyme": "^3.10.0",
     "enzyme-adapter-react-16": "^1.15.1",
-    "eslint": "5.16.0",
+    "eslint": "^6.1.0",
     "lint-staged": "8.1.5",
     "husky": "^3.0.9",
     "node-sass": "^4.12.0",
